ghc-4335c07/testsuite/tests/polykinds/T7805.stderr

T7805.hs:7:21: error:
    Expected kind ‘forall a. a -> a’, but ‘x’ has kind ‘k0’
    In the first argument of ‘HR’, namely ‘x’
    In the first argument of ‘F’, namely ‘(HR x)’
    In the type instance declaration for ‘F’
