ghc-4335c07/testsuite/tests/polykinds/T7805.hs
{-# LANGUAGE DataKinds, RankNTypes, TypeFamilies #-}
module T7805 where

data HigherRank = HR (forall a. a -> a)

type family F (x :: HigherRank)
type instance F (HR x) = Bool
